Bugfix for issue that occurred in Chrome on smaller screen

--- a/ui/src/main/resources/jcr_root/etc/clientlibs/admin/css/admin.css
+++ b/ui/src/main/resources/jcr_root/etc/clientlibs/admin/css/admin.css
@@ -55,6 +55,10 @@
 /**
  * pageEdit
  */
+.ngdialog-overlay, .ngdialog-content {
+    z-index: 1; /* Bugfix for Chrome */
+}
+
 .pageedit-label-small {
     font-size: 0.75em;
 }
